@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.527 2007/08/23 11:01:49 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.528 2007/08/29 13:58:57 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -96,6 +96,8 @@ PH/20 Added the "servers=" facility to MySQL and PostgreSQL lookups. (Oracle
       and InterBase are left for another time.)
 
 PH/21 Added message_body_newlines option.
+
+PH/22 Guard against possible overflow in moan_check_errorcopy().
 
 
 Exim version 4.67
